[workspace]
resolver = "2"
members = [
    "crates/lxst-core",
    "crates/lxst-rns",
    "crates/lxst-telephony",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
rust-version = "1.85"

[workspace.dependencies]
rmpv = "1"
thiserror = "2"
serde_json = "1"
hex = "0.4"
bytes = "1"
tokio = { version = "1", features = ["sync", "time", "rt", "macros"] }
half = "2"
proptest = "1"
opus-rs = { path = "vendor/opus-rs" }
serial_test = "3"

rns-crypto = { path = "../rsReticulum/crates/rns-crypto", version = "1.0.0" }
rns-identity = { path = "../rsReticulum/crates/rns-identity", version = "1.0.0" }
rns-interface = { path = "../rsReticulum/crates/rns-interface", version = "1.0.0" }
rns-link = { path = "../rsReticulum/crates/rns-link", version = "1.0.0" }
rns-runtime = { path = "../rsReticulum/crates/rns-runtime", version = "1.0.0" }
rns-transport = { path = "../rsReticulum/crates/rns-transport", version = "1.0.0" }
rns-wire = { path = "../rsReticulum/crates/rns-wire", version = "1.0.0" }

lxst-core = { path = "crates/lxst-core", version = "0.1.0" }
lxst-rns = { path = "crates/lxst-rns", version = "0.1.0" }
